# NEAT-for-quantum-circuits

./: .gitignore  README.md
qNEAT/: pyproject.toml  run_tests.py
qNEAT/experiments/: plot.py  random_experiment.py  run_experiments.slurm
qNEAT/figures/: .gitignore
qNEAT/qneat/: gate.py  gene.py  genome.py  helper.py  layer.py  logger.py  qNEAT.py  species.py
qNEAT/tests/: __init__.py  emptytest.txt  gate_test.py  genome_test.py  helper_test.py  layer_test.py  qNEAT_test.py  test_genome.py  test_helper.py  test_qNEAT.py
quantumNEAT/: H2.csv  LiH_hamiltonian.pkl  __init__.py  add_solution.py  h2_hamiltonian.pkl  h6_hamiltonian.pkl  make_hamiltonian.py  migrate.py  pyproject.toml  run_tests.py
quantumNEAT/experiments/: UCCSD.py  chemical_hamiltonians.sh  constant_population.sh  experimenter.py  hardware_efficient.bash  hardware_efficient.py  hydrogen.sh  hydrogen_cluster.sh  investigate_weird_circuit.py  linear_growth.py  linear_growth_fith.py  linear_growth_fith_fitness.py  linear_growth_fith_new.py  linear_growth_long.py  linear_growth_optimized.py  load_circuit.py  make_plots.py  noisy_circuit.py  plotter.py  pyspytest.sh  qasm_to_qulacs.py  qneat.py  qneat_optimized.py  run_batch.py  run_batch0-1-2-3.bash  run_batch10-11.bash  run_batch12-13-14.bash  run_batch12.bash  run_batch13.bash  run_batch14.bash  run_batch2-3.bash  run_batch4-5-6-7.bash  run_batch6-7.bash  run_batch8-9-10-11.bash  run_experiment.bash  run_experiment.py  run_experiment.sh  run_experiment_lorentz.bash  run_experiment_lorentz_n_shots.bash  run_experiment_lorentz_n_shots_test.bash  (+19 more)
(+45 files in other folders)
