[tool.poetry]
name = "qneat"
version = "0.1.0"
description = ""
authors = ["HansNorg <52379922+HansNorg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
qiskit = "^0.44.1"
qiskit-aer = "^0.12.2"
pandas = "^2.1.0"
seaborn = "^0.12.2"
qiskit-ibm-provider = "^0.7.0"
qiskit-ibm-runtime = "^0.12.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
