[tool.poetry]
name = "quantumneat"
version = "0.1.0"
description = ""
authors = ["HansNorg <52379922+HansNorg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^10.0.1"
numpy = "^1.25.2"
matplotlib = "^3.8.0"
pandas = "^2.1.0"
seaborn = "^0.12.2"
qiskit = "^0.44.2"
qiskit-aer = "^0.12.2"
qulacs = "^0.6.2"
pyzx = "^0.7.3"
pylatexenc = "^2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
